fixed table double border

--- a/app/assets/stylesheets/components/_table.scss
+++ b/app/assets/stylesheets/components/_table.scss
@@ -24,7 +24,7 @@
   border: none;
 }
 
-#all-tables > tbody > tr:last-child > td:last-child {
+#all-tables > tbody > tr:last-child > td {
   border-bottom-right-radius: 10px;
   border: none;
 }
